--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "ryly",
   "version": "0.0.0",
   "description": "Release workflow helper based on commit-and-tag-version",
+  "main": "index.js",
+  "type": "module",
   "bin": "bin/cli.js",
   "scripts": {
     "lint": "eslint .",
@@ -45,7 +47,7 @@
     "conventional-changelog-conventionalcommits": "6.1.0",
     "conventional-recommended-bump": "7.0.1",
     "detect-indent": "^6.1.0",
-    "detect-newline": "^3.1.0",
+    "detect-newline": "^4.0.1",
     "dotgitignore": "^2.1.0",
     "figures": "^3.2.0",
     "find-up": "^5.0.0",
