--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "conventional-changelog": "4.0.0",
     "conventional-changelog-config-spec": "2.1.0",
     "conventional-changelog-conventionalcommits": "6.1.0",
-    "conventional-recommended-bump": "7.0.1",
+    "conventional-recommended-bump": "^11.0.0",
     "detect-indent": "^6.1.0",
     "detect-newline": "^4.0.1",
     "dotgitignore": "^2.1.0",
