--- a/package.json
+++ b/package.json
@@ -41,35 +41,35 @@
   },
   "homepage": "https://github.com/absolute-version/commit-and-tag-version#readme",
   "dependencies": {
-    "chalk": "^2.4.2",
-    "conventional-changelog": "4.0.0",
-    "conventional-changelog-config-spec": "2.1.0",
-    "conventional-changelog-conventionalcommits": "6.1.0",
+    "chalk": "^5.4.1",
+    "conventional-changelog": "^6.0.0",
+    "conventional-changelog-config-spec": "^2.1.0",
+    "conventional-changelog-conventionalcommits": "^8.0.0",
     "conventional-recommended-bump": "^11.0.0",
-    "detect-indent": "^6.1.0",
+    "detect-indent": "^7.0.1",
     "detect-newline": "^4.0.1",
     "dotgitignore": "^2.1.0",
-    "figures": "^3.2.0",
-    "find-up": "^5.0.0",
-    "git-semver-tags": "^5.0.1",
-    "jsdom": "^25.0.1",
-    "semver": "^7.6.3",
+    "figures": "^6.1.0",
+    "find-up": "^7.0.0",
+    "git-semver-tags": "^8.0.0",
+    "jsdom": "^26.1.0",
+    "semver": "^7.7.2",
     "w3c-xmlserializer": "^5.0.0",
-    "yaml": "^2.6.0",
+    "yaml": "^2.8.0",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
-    "eslint": "^9.13.0",
-    "eslint-config-prettier": "^9.1.0",
+    "@eslint/js": "^9.27.0",
+    "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jest": "^28.8.3",
-    "eslint-plugin-n": "^17.11.1",
-    "eslint-plugin-promise": "^7.1.0",
+    "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-n": "^17.18.0",
+    "eslint-plugin-promise": "^7.2.1",
     "jest": "^29.7.0",
     "jest-serial-runner": "^1.2.1",
-    "prettier": "^3.3.3",
-    "shelljs": "^0.8.5",
-    "strip-ansi": "^6.0.1"
+    "prettier": "^3.5.3",
+    "shelljs": "^0.10.0",
+    "strip-ansi": "^7.1.0"
   }
 }
