--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "find-up": "^7.0.0",
     "git-semver-tags": "^8.0.0",
     "jsdom": "^26.1.0",
+    "mergician": "^2.0.2",
     "semver": "^7.7.2",
     "w3c-xmlserializer": "^5.0.0",
     "yaml": "^2.8.0",
