chore: remove tests
These tests were tied to the old architecture. Modern replacements will be introduced later.

--- a/package.json
+++ b/package.json
@@ -8,13 +8,9 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
-    "posttest": "npm run lint && npm run format:check",
     "format:base": "prettier \"./**/*.{ts,js}\"",
     "format:fix": "npm run format:base -- --write",
     "format:check": "npm run format:base -- --check",
-    "test": "jest",
-    "test:unit": "jest --testPathIgnorePatterns test/git.integration-test.js",
-    "test:git-integration": "jest --testPathPattern test/git.integration-test.js",
     "release": "bin/cli.js"
   },
   "repository": "absolute-version/commit-and-tag-version",
@@ -67,10 +63,6 @@
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-n": "^17.18.0",
     "eslint-plugin-promise": "^7.2.1",
-    "jest": "^29.7.0",
-    "jest-serial-runner": "^1.2.1",
-    "prettier": "^3.5.3",
-    "shelljs": "^0.10.0",
-    "strip-ansi": "^7.1.0"
+    "prettier": "^3.5.3"
   }
 }
