chore(package): update author information

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "ryly",
 	"version": "0.0.0",
 	"description": "Release workflow helper based on commit-and-tag-version",
+	"author": "Kh4f",
 	"main": "index.js",
 	"type": "module",
 	"bin": "bin/cli.js",
@@ -25,10 +26,6 @@
 		"version",
 		"angular",
 		"standard"
-	],
-	"author": "Ben Coe <ben@npmjs.com>",
-	"contributors": [
-		"Timothy Jones <timothy.l.jones@gmail.com> (https://github.com/TimothyJones)"
 	],
 	"license": "ISC",
 	"dependencies": {
