--- a/package.json
+++ b/package.json
@@ -4,22 +4,14 @@
 	"description": "Release workflow helper based on commit-and-tag-version",
 	"author": "Kh4f",
 	"license": "MIT",
-	"main": "index.js",
-	"type": "module",
-	"bin": "bin/cli.js",
 	"repository": {"type": "git", "url": "git+https://github.com/Kh4f/ryly.git"},
 	"bugs": {"url": "https://github.com/Kh4f/ryly/issues"},
 	"homepage": "https://github.com/Kh4f/ryly#readme",
-	"keywords": [
-		"ryly",
-		"release",
-		"release-workflow",
-		"release-helper",
-		"semantic-release",
-		"conventional-changelog",
-		"standard-version",
-		"commit-and-tag-version"
-	],
+	"keywords": ["ryly","release", "release-workflow", "release-helper", "semantic-release",
+		"conventional-changelog", "standard-version", "commit-and-tag-version"],
+	"main": "index.js",
+	"type": "module",
+	"bin": "bin/cli.js",
 	"scripts": {
 		"lint": "eslint .",
 		"lint:fix": "npm run lint -- --fix",
