--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	"homepage": "https://github.com/Kh4f/ryly#readme",
 	"keywords": ["ryly","release", "release-workflow", "release-helper", "semantic-release",
 		"conventional-changelog", "standard-version", "commit-and-tag-version"],
-	"main": "index.js",
+	"main": "./src/index.js",
 	"type": "module",
 	"bin": "bin/cli.js",
 	"files": [
