--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 		"format:base": "prettier \"./**/*.{ts,js}\"",
 		"format:fix": "npm run format:base -- --write",
 		"format:check": "npm run format:base -- --check",
-		"release": "node bin/cli.js"
+		"release": "node bin/cli.js --changelog --bum --commit --tag",
+		"release:gh-notes": "node bin/cli.js --profile gh-release-notes"
 	},
 	"dependencies": {
 		"chalk": "^5.4.1",
