--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,22 +25,18 @@ jobs:
         run: echo "tag=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
       - name: Create release archive
-        run: zip -r "relow-${tag}.zip" bin/ src/ package.json README.md LICENSE CHANGELOG.md
-
-      - name: Generate checksum file
-        run: sha256sum "relow-${tag}.zip" > "relow-${tag}-checksum.sha256"
+        run: zip -r "${GITHUB_REPOSITORY##*/}-${tag}.zip" dist/ package.json LICENSE README.md
 
       - name: Generate release notes
         run: npm run release:gh-notes
 
-      - name: Create release
+      - name: Create GitHub release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           RELEASE_NOTES=$(cat RELEASE.md)
-
           gh release create "$tag" \
             --title="$tag" \
             --notes "$RELEASE_NOTES" \
             --draft \
-            "relow-${tag}.zip" "relow-${tag}-checksum.sha256"
+            "${GITHUB_REPOSITORY##*/}-${tag}.zip"
