ci(release): add npm publish step

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      id-token: write
     steps:
       - uses: actions/checkout@v3
 
@@ -40,3 +41,8 @@ jobs:
             --notes "$RELEASE_NOTES" \
             --draft \
             "${GITHUB_REPOSITORY##*/}-${tag}.zip"
+
+      - name: Publish to npm
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm publish --access public --provenance
