--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
         run: echo "tag=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
       - name: Create release archive
-        run: zip -r "${GITHUB_REPOSITORY##*/}-${tag}.zip" dist/ package.json LICENSE README.md
+        run: zip -r "${GITHUB_REPOSITORY##*/}-${tag}.zip" bin/ src/ package.json LICENSE README.md
 
       - name: Generate release notes
         run: npm run release:gh-notes
