--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,9 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@v4
+        with:
+          # fetch full commit history for correct release notes generation
+          fetch-depth: 0
 
       - name: Use Node.js
         uses: actions/setup-node@v4
