--- a/package.json
+++ b/package.json
@@ -63,13 +63,11 @@
 		"yargs": "^17.7.2"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.27.0",
-		"eslint": "^9.27.0",
-		"eslint-config-prettier": "^10.1.5",
-		"eslint-plugin-import": "^2.31.0",
-		"eslint-plugin-jest": "^28.11.0",
-		"eslint-plugin-n": "^17.18.0",
-		"eslint-plugin-promise": "^7.2.1",
-		"prettier": "^3.5.3"
+		"@eslint/js": "^9.29.0",
+		"@stylistic/eslint-plugin": "^4.4.1",
+		"eslint": "^9.29.0",
+		"globals": "^16.2.0",
+		"prettier": "^3.5.3",
+		"typescript-eslint": "^8.34.1"
 	}
 }
