--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
 		"src",
 		"package.json",
 		"LICENSE",
-		"README.md",
-		"CHANGELOG.md"
+		"README.md"
 	],
 	"scripts": {
 		"lint": "eslint .",
