--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 	"devDependencies": {
 		"@eslint/js": "^9.29.0",
 		"@stylistic/eslint-plugin": "^4.4.1",
+		"@types/node": "^24.0.3",
 		"eslint": "^9.29.0",
 		"globals": "^16.2.0",
 		"prettier": "^3.5.3",
