--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 	"scripts": {
 		"lint": "eslint",
 		"lint:fix": "eslint --fix",
+		"test": "vitest run",
+		"test:watch": "vitest",
 		"release": "node ./src/cli.js --changelog --bump --commit --tag",
 		"release:gh-notes": "node ./src/cli.js --changelog --profile gh-release-notes "
 	},
