--- a/package.json
+++ b/package.json
@@ -38,12 +38,20 @@
 		"test:watch": "vitest",
 		"commit": "cz",
 		"release": "node ./src/cli.js --changelog --bump --commit --tag",
-		"release:gh-notes": "node ./src/cli.js --changelog --profile gh-release-notes "
+		"release:gh-notes": "node ./src/cli.js --changelog --profile gh-release-notes ",
+		"prepare": "simple-git-hooks"
 	},
 	"config": {
 		"commitizen": {
 			"path": "@commitlint/cz-commitlint"
 		}
+	},
+	"simple-git-hooks": {
+		"pre-commit": "pnpm lint-staged",
+		"commit-msg": "pnpm commitlint --edit"
+	},
+	"lint-staged": {
+		"*": "pnpm lint:fix"
 	},
 	"dependencies": {
 		"chalk": "^5.4.1",
@@ -75,7 +83,9 @@
 		"commitizen": "^4.3.1",
 		"eslint": "^9.29.0",
 		"globals": "^16.2.0",
+		"lint-staged": "^16.1.2",
 		"prettier": "^3.5.3",
+		"simple-git-hooks": "^2.13.0",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.34.1",
 		"vitest": "^3.2.4"
