--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
 		"lint-staged": "^16.1.2",
 		"prettier": "^3.5.3",
 		"simple-git-hooks": "^2.13.0",
+		"tsdown": "^0.12.8",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.34.1",
 		"vitest": "^3.2.4"
