build(scripts): add build scripts

--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
 		"lint:fix": "eslint --fix",
 		"test": "vitest run",
 		"test:watch": "vitest",
+		"build": "tsdown",
+		"build:watch": "tsdown --watch",
+		"build:prod": "tsdown --production",
 		"commit": "cz",
 		"release": "node ./src/cli.js --changelog --bump --commit --tag",
 		"release:gh-notes": "node ./src/cli.js --changelog --profile gh-release-notes ",
