--- a/package.json
+++ b/package.json
@@ -39,19 +39,12 @@
 		"build": "tsdown",
 		"build:watch": "tsdown --watch",
 		"build:prod": "tsdown --production",
-		"commit": "cz",
 		"release": "node ./src/cli.js --changelog --bump --commit --tag",
 		"release:gh-notes": "node ./src/cli.js --changelog --profile gh-release-notes ",
 		"prepare": "simple-git-hooks"
 	},
-	"config": {
-		"commitizen": {
-			"path": "@commitlint/cz-commitlint"
-		}
-	},
 	"simple-git-hooks": {
-		"pre-commit": "pnpm lint-staged",
-		"commit-msg": "pnpm commitlint --edit"
+		"pre-commit": "pnpm lint-staged"
 	},
 	"lint-staged": {
 		"*.{js,ts}": "pnpm lint:fix"
@@ -77,13 +70,9 @@
 		"yargs": "^17.7.2"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^19.8.1",
-		"@commitlint/cz-commitlint": "^19.8.1",
-		"@commitlint/types": "^19.8.1",
 		"@eslint/js": "^9.29.0",
 		"@stylistic/eslint-plugin": "^4.4.1",
 		"@types/node": "^24.0.3",
-		"commitizen": "^4.3.1",
 		"eslint": "^9.29.0",
 		"globals": "^16.2.0",
 		"lint-staged": "^16.1.2",
