chore(tsconfig): add `moduleDetection` set to `force` and remove `skipLibCheck`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
 		"moduleResolution": "bundler",
 		"noEmit": true,
 		"strict": true,
-		"skipLibCheck": true,
 		"verbatimModuleSyntax": true,
+		"moduleDetection": "force",
 		"paths": { "@/*": ["./src/*"] },
 	},
 	"include": ["./**/*.ts"]
