--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 	},
 	"dependencies": {
 		"chalk": "^5.6.0",
+		"cleye": "^1.3.4",
 		"compare-func": "^2.0.0",
 		"conventional-changelog": "^7.1.1",
 		"conventional-changelog-config-spec": "^2.1.0",
@@ -62,6 +63,7 @@
 		"figures": "^6.1.0",
 		"find-up": "^7.0.0",
 		"git-semver-tags": "^8.0.0",
+		"handlebars": "^4.7.8",
 		"jsdom": "^26.1.0",
 		"mergician": "^2.0.2",
 		"semver": "^7.7.2",
