--- a/package.json
+++ b/package.json
@@ -4,33 +4,14 @@
 	"description": "Release workflow helper for Node.js projects.",
 	"author": "Kh4f <kh4f.dev@gmail.com>",
 	"license": "MIT",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/Kh4f/relion.git"
-	},
-	"bugs": {
-		"url": "https://github.com/Kh4f/relion/issues"
-	},
+	"repository": "git+https://github.com/Kh4f/relion.git",
+	"bugs": "https://github.com/Kh4f/relion/issues",
 	"homepage": "https://github.com/Kh4f/relion#readme",
-	"keywords": [
-		"relion",
-		"release",
-		"release-workflow",
-		"release-helper",
-		"semantic-release",
-		"conventional-changelog",
-		"standard-version",
-		"commit-and-tag-version"
-	],
+	"keywords": ["relion", "release", "release-workflow", "release-helper", "semantic-release", "conventional-changelog", "standard-version", "commit-and-tag-version"],
 	"main": "./src/index.js",
 	"type": "module",
 	"bin": "./src/cli.js",
-	"files": [
-		"src",
-		"package.json",
-		"LICENSE",
-		"README.md"
-	],
+	"files": ["src", "package.json", "LICENSE", "README.md"],
 	"scripts": {
 		"lint": "eslint",
 		"lint:fix": "eslint --fix",
@@ -43,12 +24,8 @@
 		"release:gh-notes": "node ./src/cli.js --changelog --profile gh-release-notes ",
 		"prepare": "simple-git-hooks"
 	},
-	"simple-git-hooks": {
-		"pre-commit": "pnpm lint-staged"
-	},
-	"lint-staged": {
-		"*.{js,ts}": "pnpm lint:fix"
-	},
+	"simple-git-hooks": { "pre-commit": "pnpm lint-staged" },
+	"lint-staged": { "*.{js,ts}": "pnpm lint:fix" },
 	"dependencies": {
 		"chalk": "^5.6.0",
 		"cleye": "^1.3.4",
