--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Release workflow helper for Node.js projects.",
 	"author": "Kh4f <kh4f.dev@gmail.com>",
 	"license": "MIT",
-	"repository": "git+https://github.com/Kh4f/relion.git",
+	"repository": "https://github.com/Kh4f/relion",
 	"bugs": "https://github.com/Kh4f/relion/issues",
 	"homepage": "https://github.com/Kh4f/relion#readme",
 	"keywords": ["relion", "release", "release-workflow", "release-helper", "semantic-release", "conventional-changelog", "standard-version", "commit-and-tag-version"],
