chore(package): fix GitHub username casing in metadata fields

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
 	"description": "Release workflow helper for Node.js projects.",
 	"author": "Kh4f <kh4f.dev@gmail.com>",
 	"license": "MIT",
-	"repository": "https://github.com/Kh4f/relion",
-	"bugs": "https://github.com/Kh4f/relion/issues",
-	"homepage": "https://github.com/Kh4f/relion#readme",
+	"repository": "https://github.com/kh4f/relion",
+	"bugs": "https://github.com/kh4f/relion/issues",
+	"homepage": "https://github.com/kh4f/relion#readme",
 	"keywords": ["relion", "release", "release-workflow", "release-helper", "semantic-release", "conventional-changelog", "standard-version", "commit-and-tag-version"],
 	"main": "./src/index.js",
 	"type": "module",
