--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
 	"bugs": "https://github.com/kh4f/relion/issues",
 	"homepage": "https://github.com/kh4f/relion#readme",
 	"keywords": ["relion", "release", "release-workflow", "release-helper", "semantic-release", "conventional-changelog", "standard-version", "commit-and-tag-version"],
-	"main": "./src/index.js",
+	"main": "src/index.js",
 	"type": "module",
-	"bin": "./src/cli.js",
+	"bin": "src/cli.js",
 	"files": ["src", "package.json", "LICENSE", "README.md"],
 	"scripts": {
 		"lint": "eslint",
