--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
 	"bugs": "https://github.com/kh4f/relion/issues",
 	"homepage": "https://github.com/kh4f/relion#readme",
 	"keywords": ["relion", "release", "release-workflow", "release-helper", "semantic-release", "conventional-changelog", "standard-version", "commit-and-tag-version"],
+	"files": ["src", "package.json", "LICENSE", "README.md"],
+	"type": "module",
 	"main": "src/index.js",
 	"types": "dist/index.d.ts",
-	"type": "module",
 	"bin": "src/cli.js",
-	"files": ["src", "package.json", "LICENSE", "README.md"],
 	"scripts": {
 		"lint": "eslint",
 		"lint:fix": "eslint --fix",
@@ -25,8 +25,6 @@
 		"release:gh-notes": "node ./src/cli.js --changelog --profile gh-release-notes ",
 		"prepare": "simple-git-hooks"
 	},
-	"simple-git-hooks": { "pre-commit": "pnpm lint-staged" },
-	"lint-staged": { "*.{js,ts}": "pnpm lint:fix" },
 	"dependencies": {
 		"chalk": "^5.6.0",
 		"cleye": "^1.3.4",
@@ -62,5 +60,7 @@
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.42.0",
 		"vitest": "^3.2.4"
-	}
+	},
+	"simple-git-hooks": { "pre-commit": "pnpm lint-staged" },
+	"lint-staged": { "*.{js,ts}": "pnpm lint:fix" }
 }
