--- a/package.json
+++ b/package.json
@@ -7,8 +7,22 @@
 	"repository": "https://github.com/kh4f/relion",
 	"bugs": "https://github.com/kh4f/relion/issues",
 	"homepage": "https://github.com/kh4f/relion#readme",
-	"keywords": ["relion", "release", "release-workflow", "release-helper", "semantic-release", "conventional-changelog", "standard-version", "commit-and-tag-version"],
-	"files": ["src", "package.json", "LICENSE", "README.md"],
+	"keywords": [
+		"relion",
+		"release",
+		"release-workflow",
+		"release-helper",
+		"semantic-release",
+		"conventional-changelog",
+		"standard-version",
+		"commit-and-tag-version"
+	],
+	"files": [
+		"src",
+		"package.json",
+		"LICENSE",
+		"README.md"
+	],
 	"type": "module",
 	"main": "src/index.js",
 	"types": "dist/index.d.ts",
@@ -51,6 +65,7 @@
 		"@eslint/js": "^9.34.0",
 		"@stylistic/eslint-plugin": "^5.3.1",
 		"@types/node": "^24.3.1",
+		"@types/semver": "^7.7.1",
 		"eslint": "^9.34.0",
 		"globals": "^16.3.0",
 		"lint-staged": "^16.1.6",
@@ -61,6 +76,10 @@
 		"typescript-eslint": "^8.42.0",
 		"vitest": "^3.2.4"
 	},
-	"simple-git-hooks": { "pre-commit": "pnpm lint-staged" },
-	"lint-staged": { "*.{js,ts}": "pnpm lint:fix" }
+	"simple-git-hooks": {
+		"pre-commit": "pnpm lint-staged"
+	},
+	"lint-staged": {
+		"*.{js,ts}": "pnpm lint:fix"
+	}
 }
