--- a/package.json
+++ b/package.json
@@ -40,26 +40,9 @@
 		"prepare": "simple-git-hooks"
 	},
 	"dependencies": {
-		"chalk": "^5.6.0",
 		"cleye": "^1.3.4",
-		"compare-func": "^2.0.0",
-		"conventional-changelog": "^7.1.1",
-		"conventional-changelog-config-spec": "^2.1.0",
-		"conventional-changelog-conventionalcommits": "^9.1.0",
-		"conventional-recommended-bump": "^11.2.0",
-		"detect-indent": "^7.0.1",
-		"detect-newline": "^4.0.1",
-		"dotgitignore": "^2.1.0",
-		"figures": "^6.1.0",
-		"find-up": "^7.0.0",
-		"git-semver-tags": "^8.0.0",
 		"handlebars": "^4.7.8",
-		"jsdom": "^26.1.0",
-		"mergician": "^2.0.2",
-		"semver": "^7.7.2",
-		"w3c-xmlserializer": "^5.0.0",
-		"yaml": "^2.8.1",
-		"yargs": "^18.0.0"
+		"semver": "^7.7.2"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.34.0",
@@ -69,7 +52,6 @@
 		"eslint": "^9.34.0",
 		"globals": "^16.3.0",
 		"lint-staged": "^16.1.6",
-		"prettier": "^3.6.2",
 		"simple-git-hooks": "^2.13.1",
 		"tsdown": "^0.14.2",
 		"typescript": "^5.9.2",
