--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
 		"build": "tsdown",
 		"build:watch": "tsdown --watch",
 		"build:prod": "tsdown --production",
-		"release": "node ./src/cli.js --changelog --bump --commit --tag",
-		"release:gh-notes": "node ./src/cli.js --changelog --profile gh-release-notes ",
+		"release": "node dist/cli.js -blct",
+		"release:github": "node dist/cli.js -l -p github",
 		"prepare": "simple-git-hooks"
 	},
 	"dependencies": {
