feat(changelog): add `latest-release` commit range support for changelog generation
- Implement `latest-release` commit range to generate changelog between last two version tags
- Add CLI flag `--latest` (-L) to enable latest release mode
- Update type definitions to include new commit range option
- Add corresponding test case and update npm script

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"test:watch": "vitest",
 		"lint:fix": "eslint --fix",
 		"release": "node dist/cli.js -blct",
-		"release:github": "node dist/cli.js -l -p github",
+		"release:github": "node dist/cli.js -l -p github -L",
 		"prepare": "simple-git-hooks"
 	},
 	"dependencies": {
