--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"lint-staged": "^16.1.6",
 		"simple-git-hooks": "^2.13.1",
 		"tsdown": "^0.14.2",
+		"tsx": "^4.20.5",
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.42.0",
 		"vitest": "^3.2.4"
