--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          RELEASE_NOTES=$(pnpm release:github)
+          RELEASE_NOTES=$(pnpm --silent release:github)
           gh release create "$tag" \
             --title="$tag" \
             --notes "$RELEASE_NOTES" \
