--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -17,7 +17,8 @@
             "matchUpdateTypes": ["patch", "minor"],
 			"matchCurrentVersion": "!/^0/",
             "automerge": true,
-			"automergeType": "branch"
+			"automergeType": "branch",
+			"matchCurrentAge": "> 3 days"
         },
 		{
 			"matchDepTypes": ["dependencies"],
