--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -35,6 +35,10 @@
 		{
             "matchManagers": ["github-actions"],
             "semanticCommitScope": "actions"
+		},
+		{
+			"matchDepNames": "pnpm",
+			"semanticCommitScope": "package-manager"
 		}
-	]	
+	]
 }
