chore(renovate): fix automerge configuration for v0.x dependencies
Previously, patch updates for v0.x versions were blocked from automerging due to the `!/^0/` condition being applied to both patch and minor updates. Now patch updates can automerge regardless of version, while minor updates still respect the v0.x constraint.

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -14,7 +14,13 @@
 	"branchTopic": "{{depNameSanitized}}-{{newVersion}}",
 	"packageRules": [
 		{
-            "matchUpdateTypes": ["patch", "minor"],
+            "matchUpdateTypes": "patch",
+            "automerge": true,
+			"automergeType": "branch",
+			"matchCurrentAge": "> 3 days"
+        },
+		{
+            "matchUpdateTypes": "minor",
 			"matchCurrentVersion": "!/^0/",
             "automerge": true,
 			"automergeType": "branch",
