--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
 		"lint:fix": "eslint --fix",
 		"test": "vitest run index",
 		"test:watch": "vitest index",
-		"release": "node dist/cli.js -blct",
-		"release:github": "node dist/cli.js -l -p github -L",
+		"release": "tsx scripts/relion-runner -blmt",
+		"release:github": "tsx scripts/relion-runner -l -p github -L",
 		"prepare": "simple-git-hooks"
 	},
 	"dependencies": {
