--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
 	"description": "Release workflow helper for Node.js projects.",
 	"author": "Kh4f <kh4f.dev@gmail.com>",
 	"license": "MIT",
+	"engines": {
+		"node": "^24.5.0"
+	},
 	"packageManager": "pnpm@10.17.0",
 	"repository": "https://github.com/kh4f/relion",
 	"bugs": "https://github.com/kh4f/relion/issues",
