--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
 		"lint:fix": "eslint --fix",
 		"test": "vitest run index",
 		"test:watch": "vitest index",
-		"release": "pnpm relion -blmt",
-		"release:github": "pnpm relion -l -p github -L",
+		"release": "pnpm relion",
+		"release:github": "pnpm relion --profile github --latest",
 		"relion": "tsx scripts/relion-runner",
 		"prepare": "simple-git-hooks"
 	},
