chore(package): update `test` script to run all tests

--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
 		"build:prod": "tsdown --production",
 		"lint": "eslint",
 		"lint:fix": "eslint --fix",
-		"test": "vitest run index",
-		"test:watch": "vitest index",
+		"test": "vitest run",
+		"test:watch": "vitest",
 		"release": "pnpm relion",
 		"release:github": "pnpm relion --profile github --latest",
 		"relion": "tsx scripts/relion-runner",
