--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
-        with: 
+        with:
+          ref: main
           fetch-depth: 0 # fetch full history for correct commits parsing
 
       - name: Setup pnpm
@@ -55,4 +56,4 @@ jobs:
       - name: Publish to npm
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: pnpm publish --access public --provenance --no-git-checks
+        run: pnpm publish --access public --provenance
