--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,10 +24,7 @@ jobs:
 
       - name: Setup Node.js
         uses: actions/setup-node@v5
-        with:
-          node-version: latest
-          cache: pnpm
-          registry-url: https://registry.npmjs.org/
+        with: { node-version: latest, cache: pnpm, registry-url: https://registry.npmjs.org/ }
 
       - name: Install deps
         run: pnpm install
