--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,12 @@ jobs:
       - name: Build
         run: pnpm build:prod
 
+      - name: Lint
+        run: pnpm lint
+
+      - name: Test
+        run: pnpm test
+
       - name: Create release archive
         run: |
           ARCHIVE_NAME=${GITHUB_REPOSITORY##*/}-$TAG.zip
