ci(workflows): update lint step to use `lint:fix` script

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
         run: pnpm build:prod
 
       - name: Lint
-        run: pnpm lint
+        run: pnpm lint:fix
 
       - name: Test
         run: pnpm test
