--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         run: pnpm build:prod
 
       - name: Lint
-        run: pnpm lint
+        run: pnpm lint:fix
 
       - name: Test
         run: pnpm test
