ci(checks): improve comment clarity for commit history fetching

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
-        # fetch full history for correct commits parsing
+        # fetch full history for correct commits parsing in tests
         with: { fetch-depth: 0 }
 
       - name: Setup pnpm
