--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Setup Node.js
         uses: actions/setup-node@v5
-        with: { node-version: latest, cache: pnpm }
+        with: { node-version: 24.9.0, cache: pnpm }
 
       - name: Install deps
         run: pnpm install
