--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "relion",
 	"version": "0.19.0",
-	"description": "Release workflow helper for Node.js projects.",
+	"description": "Release workflow helper.",
 	"author": "Kh4f <kh4f.dev@gmail.com>",
 	"license": "MIT",
 	"engines": {
