chore(renovate): add custom commit scopes for `pnpm` and engine bumps

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -44,6 +44,10 @@
 		{
 			"matchDepNames": "pnpm",
 			"semanticCommitScope": "package-manager"
+		},
+		{
+			"matchDepTypes": ["engines"],
+			"semanticCommitScope": "engine"
 		}
 	]
 }
