chore(renovate): specify `commitMessageTopic` for `pnpm` and `engines` rules
Renovate overwrites the top-level `commitMessageTopic` for these rules, so explicit duplication is required.

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -43,11 +43,13 @@
 		},
 		{
 			"matchDepNames": "pnpm",
-			"semanticCommitScope": "package-manager"
+			"semanticCommitScope": "package-manager",
+			"commitMessageTopic": "`{{depName}}`"
 		},
 		{
 			"matchDepTypes": ["engines"],
-			"semanticCommitScope": "engine"
+			"semanticCommitScope": "engine",
+			"commitMessageTopic": "`{{depName}}`"
 		}
 	]
 }
