--- a/package.json
+++ b/package.json
@@ -45,9 +45,10 @@
 		"prepare": "simple-git-hooks"
 	},
 	"dependencies": {
-		"cleye": "^1.3.4",
 		"handlebars": "^4.7.8",
-		"semver": "^7.7.3"
+		"semver": "^7.7.3",
+		"cleye": "^1.3.4",
+		"tsx": "^4.20.6"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.38.0",
@@ -59,7 +60,6 @@
 		"lint-staged": "^16.2.4",
 		"simple-git-hooks": "^2.13.1",
 		"tsdown": "^0.15.7",
-		"tsx": "^4.20.6",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.46.1",
 		"vitest": "^3.2.4"
