--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
 	"dependencies": {
 		"handlebars": "^4.7.8",
 		"semver": "^7.7.3",
-		"cleye": "^1.3.4",
-		"tsx": "^4.20.6"
+		"cleye": "^1.3.4"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.38.0",
@@ -61,6 +60,7 @@
 		"simple-git-hooks": "^2.13.1",
 		"tsdown": "^0.15.8",
 		"typescript": "^5.9.3",
+		"tsx": "^4.20.6",
 		"typescript-eslint": "^8.46.1",
 		"vitest": "^3.2.4"
 	},
