ci(workflows): update pnpm and Node.js versions to latest
- Change `pnpm` version from `10.27.0` to `latest`
- Change `Node.js` version from `24.12.0` to `latest`

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,11 +20,11 @@ jobs:
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
-        with: { version: 10.27.0 }
+        with: { version: latest }
 
       - name: Setup Node.js
         uses: actions/setup-node@v6
-        with: { node-version: 24.12.0, cache: pnpm, registry-url: https://registry.npmjs.org }
+        with: { node-version: latest, cache: pnpm, registry-url: https://registry.npmjs.org }
 
       - name: Install deps
         run: pnpm install
