--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,11 @@ jobs:
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
-        with: { version: 10.27.0 }
+        with: { version: latest }
 
       - name: Setup Node.js
         uses: actions/setup-node@v6
-        with: { node-version: 24.12.0, cache: pnpm }
+        with: { node-version: latest, cache: pnpm }
 
       - name: Install deps
         run: pnpm install
