--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "relion",
 	"version": "0.32.1",
-	"description": "Release workflow helper.",
+	"description": "Release Workflow Helper",
 	"author": "Kh4f <kh4f.dev@gmail.com>",
 	"license": "MIT",
 	"repository": "https://github.com/kh4f/relion",
