--- a/package.json
+++ b/package.json
@@ -7,37 +7,34 @@
 	"repository": "https://github.com/kh4f/relion",
 	"bugs": "https://github.com/kh4f/relion/issues",
 	"homepage": "https://github.com/kh4f/relion#readme",
-	"keywords": ["relion", "release", "release-workflow", "release-helper", "semantic-release", "conventional-changelog", "standard-version", "commit-and-tag-version"],
-	"files": ["dist", "package.json", "LICENSE", "README.md"],
+	"keywords": ["relion", "release", "release-automation", "release-workflow", "release-helper", "release-workflow-helper"],
+	"pnpm": { "onlyBuiltDependencies": ["esbuild"] },
+	"files": ["dist"],
 	"type": "module",
 	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
 	"bin": "dist/cli.js",
+	"types": "dist/index.d.ts",
 	"scripts": {
 		"build": "tsdown",
 		"build:watch": "tsdown --watch",
-		"build:prod": "tsdown --production",
+		"build:prod": "tsdown --prod",
 		"lint": "eslint",
-		"lint:fix": "eslint --fix",
-		"release": "pnpm relion",
-		"release:github": "pnpm relion -p github",
-		"relion": "tsx scripts/relion-runner"
+		"release:context": "pnpm relion -f",
+		"release": "pnpm relion -bct --gpg",
+		"relion": "tsx src/cli"
 	},
-	"dependencies": {
-		"handlebars": "^4.7.8",
-		"semver": "^7.7.3",
-		"cleye": "^2.2.1"
-	},
+	"dependencies": { "semver": "^7.7.3" },
 	"devDependencies": {
 		"@eslint/js": "^9.39.2",
-		"@stylistic/eslint-plugin": "^5.6.1",
-		"@types/node": "^25.0.3",
+		"@stylistic/eslint-plugin": "^5.7.0",
+		"@types/node": "^25.0.6",
 		"@types/semver": "^7.7.1",
 		"eslint": "^9.39.2",
 		"globals": "^17.0.0",
-		"tsdown": "^0.18.4",
-		"typescript": "^5.9.3",
+		"jiti": "^2.6.1",
+		"tsdown": "^0.19.0",
 		"tsx": "^4.21.0",
+		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.52.0"
 	}
 }
