--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"build:prod": "tsdown --prod",
 		"lint": "eslint",
 		"release:context": "pnpm relion -f",
-		"release": "pnpm relion -bct --gpg",
+		"release": "pnpm relion -bct",
 		"relion": "tsx src/cli"
 	},
 	"dependencies": { "semver": "^7.7.3" },
