--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
 	"extends": ["mergeConfidence:all-badges"],
-	"ignorePaths": ["node_modules/**", "tests/**"],
+	"ignorePaths": ["node_modules/**"],
 	"dependencyDashboard": true,
 	"rangeStrategy": "bump",
 	"semanticCommits": "enabled",
